direct project visible prbm fix on userside

--- a/components/user-my-project/PaymentUserMyproject.module.css
+++ b/components/user-my-project/PaymentUserMyproject.module.css
@@ -65,6 +65,9 @@
   border-radius: 6px;
   border: 1px solid #e7e7e7;
 }
+.payment_card:not(:last-child) {
+  margin-bottom: 15px;
+}
 
 .title_payment_card {
   width: 100%;
